--- a/paginas/contacto/contacto.css
+++ b/paginas/contacto/contacto.css
@@ -2,6 +2,19 @@
     background-color: #fff59d;
 }
 
+.nav-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    min-width: 100%
+}
+
+* {
+    font-family: 'Roboto', sans-serif;
+    list-style: none;
+
+}
+
 
 * {
     margin: 0;
