--- a/paginas/carrito/Carrito.css
+++ b/paginas/carrito/Carrito.css
@@ -3,6 +3,19 @@
     height: 30px;
 }
 
+* {
+    font-family: 'Roboto', sans-serif;
+    list-style: none;
+
+}
+
+.nav-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    min-width: 100%
+}
+
 .carrito_main {
     display: flex;
     flex-direction: row;
