--- a/style.css
+++ b/style.css
@@ -1,21 +1,27 @@
+/* Index */
 * {
     font-family: 'Roboto', sans-serif;
     list-style: none;
 
 }
 
-.index_nav_color{
+.nav__global {
     background-color: #fff59d;
 }
 
-.nav-container{
+.nav__global__item {
+    margin-top: .5rem;
+}
+
+
+.nav__global__icons {
+    margin-top: .2rem;
+}
+
+.nav__global__container{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     min-width: 100%
 }
 
-
-* {
-    margin: 0;
-}
