agrega vista de abm admin

--- a/paginas/abm-administrador/ABMadministrador.css
+++ b/paginas/abm-administrador/ABMadministrador.css
@@ -1,17 +1,32 @@
+.edit-delete-icons {
+    width: 25px;
+    height: 25px;
+    margin-right: 1em;
 
-.index__nav{
-    background-color: #fff59d;
+    &:hover {
+        cursor: pointer;
+    }
 }
 
-* {
-    font-family: 'Roboto', sans-serif;
-    list-style: none;
-
-}
-
-.nav-container{
+.acciones {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    min-width: 100%
+}
+
+.titulo-tabla{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: 1em;
+    margin-top: 2em;
+}
+
+.titulo-tabla img{
+    width: 25px;
+    height: 25px;
+    margin-left: 1em;
+    margin-bottom: .5em;
+    &:hover{
+        cursor: pointer;
+    }
 }
