pasa todo lo viejo al directorio "old" y lo pone dentro del proyecto laravel

--- a/produccionWeb/old/paginas/abm-administrador/ABMadministrador.css
+++ b/produccionWeb/old/paginas/abm-administrador/ABMadministrador.css
@@ -3,9 +3,11 @@
     height: 25px;
     margin-right: 1em;
 
-    &:hover {
-        cursor: pointer;
-    }
+}
+
+.edit-delete-icons:hover {
+    cursor: pointer;
+
 }
 
 .acciones {
@@ -26,7 +28,8 @@
     height: 25px;
     margin-left: 1em;
     margin-bottom: .5em;
-    &:hover{
-        cursor: pointer;
-    }
+ }
+
+titulo-tabla img:hover{
+    cursor: pointer;
 }
